fixed white space below header in ContactUS page

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,9 @@ body {
     font-family: Arial, Helvetica, sans-serif ;
     margin: 0;
     height: 100%;
+    background-color: ;
 }
+
 
 html {
     box-sizing: border-box;
